Cleaned up files and fixed nav on mobile

--- a/src/styles/Nav.css
+++ b/src/styles/Nav.css
@@ -1,11 +1,35 @@
 #name {
     font-family: 'Mr De Haviland', cursive;
     font-size: xx-large;
-    color: black;
+    color: white;
 }
 
 .navBar {
  background-color: rgb(0, 0, 0);
+}
+
+.Links {
+    color: white;
+}
+
+.navbox {
+    background-color: white;
+}
+
+@media screen and (max-width:500px){
+    #name {
+        color: rgb(0, 0, 0);
+    }
+    
+    .navBar {
+     background-color: rgb(255, 255, 255);
+    }
+    
+    .Links {
+        color: rgb(0, 0, 0);
+    }
+    
+
 }
 
 /* .navBox {
